--- a/tupian.html
+++ b/tupian.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="css/css.css" />
-	<link rel="stylesheet" href="./css/style.css">
+	<link type="text/css" rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/css.css" />
+	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/style.css">
 	<title>doc</title>
 </head>
 </head>
@@ -93,7 +93,7 @@
 			<p>Understanding climate <br> change shouldn't be so <br> complicated</p>
 		</div>
 		<div class="ab-text">
-			<img src="./images/la2.png" alt="" style="width: 45%;">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/la2.png" alt="" style="width: 45%;">
 			<div>
 				<p style="margin-top: 0;">
 					The NextGene team unites over a commitment to low-carbon education. In China, by collaborating with
@@ -117,7 +117,7 @@
 				</p>
 			</div>
 		</div>
-		<!-- <div><img src="./images/la1.png" alt="" style="width: 100%;"></div> -->
+		<!-- <div><img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/la1.png" alt="" style="width: 100%;"></div> -->
 	</div>
 	<div class="main">
 		<div style="margin: 50px;">
@@ -131,19 +131,19 @@
 		<ul class="clearfix list">
 			<div class="warpper">
 				<li>
-					<div style="background-image: url(./images/1.png);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/1.png);"></div>
 					<p class="name">Prof. Fu Xiaolan</p>
 					<p> lifetime professor at Oxford University and specializes in international development.
 					</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/2.png);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/2.png);"></div>
 					<p class="name">Professor Freek Kapteijn</p>
 					<p> Catalysis Engineering Expert at Delft University of Technology
 					</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/3.jpeg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/3.jpeg);"></div>
 					<p class="name">Professor Gao Wei</p>
 					<p>
 						Distinguished Fellow of the Royal Society of New Zealand and Academic at the University of
@@ -152,7 +152,7 @@
 					</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/4.jpeg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/4.jpeg);"></div>
 					<p class="name">Sir David King </p>
 					<p>
 						Fellow of the Royal Society, Special Adviser to Uganda in general. Formerly Chief Scientific
@@ -162,14 +162,14 @@
 				</li>
 
 				<li>
-					<div style="background-image: url(./images/5.jpeg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/5.jpeg);"></div>
 					<p class="name">Dr. Thomas Bohné</p>
 					<p>Professor of Advanced Manufacturing in the Department of Engineering at the University of
 						Cambridge, Director of the Human-Computer Interaction Laboratory, Chair of the Cambridge VR
 						Committee</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/ccc1.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/ccc1.jpg);"></div>
 					<p class="name">Yi CUI</p>
 					<p>Professor of Materials Science and Engineering, Stanford University
 						Member, U.S. National Academy of Sciences
@@ -179,7 +179,7 @@
 					</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/ccc2.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/ccc2.jpg);"></div>
 					<p class="name">Kai LI</p>
 					<p>
 						Paul & Marcia Wythes Professor, Princeton University
@@ -188,13 +188,13 @@
 					</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/ccc3.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/ccc3.jpg);"></div>
 					<p class="name">Dawn SONG</p>
 					<p>Professor, Computer Science, UC Berkeley
 					</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/ccc4.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/ccc4.jpg);"></div>
 					<p class="name">Sijue Wu</p>
 					<p>
 						Robert W. and Lynn H. Browne Professor of Mathematics, University of Michigan
@@ -205,38 +205,38 @@
 			<h1 class="main tit" style="margin-top: 40px;">Youth Team</h1>
 			<div class="warpper" style="margin-top: 30px;">
 				<li>
-					<div style="background-image: url(./images/ma1.png);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/ma1.png);"></div>
 					<p class="name">Brittany Li</p>
 					<p >General Manager</p>
 					<!-- <p>Postdoc of Hematology and Oncology, Harvard University</p> -->
 				</li>
 				<li>
-					<div style="background-image: url(./images/add1.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/add1.jpg);"></div>
 					<p class="name">Yong Shen</p>
 					<p>Postdoc of Hematology and Oncology, Harvard University</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/add2.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/add2.jpg);"></div>
 					<p class="name">Yongcheng Jin</p>
 					<p>Ph.D. student of Chemical Biology, University of Oxford</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/add3.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/add3.jpg);"></div>
 					<p class="name">Xinhong Chen</p>
 					<p>Ph.D. student of Neuroscience, Caltech</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/add4.png);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/add4.png);"></div>
 					<p class="name">Kristy Sheng</p>
 					<p>MPH in Epidemiology, Harvard University</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/add.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/add.jpg);"></div>
 					<p class="name">Wei Chen (Alex)</>
 					<p>Ph.D. student of Civil and Environmental Engineering, Stanford University</p>
 				</li>
 				<li>
-					<div style="background-image: url(./images/add6.jpg);"></div>
+					<div style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/add6.jpg);"></div>
 					<p class="name">Harry Zhu</p>
 					<p>Ph.D. student of Chemical Engineering, University of Cambridge</p>
 				</li>
@@ -268,25 +268,25 @@
 	</div>
 	<div class="copy main">
 		<p style="color: #687cd8;">Supported by</p>
-		<img src="./images/logo.png" alt="">
+		<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/logo.png" alt="">
 
 		<p style="color: #687cd8; margin-top: 100px;">Partners</p>
 		<div class="lgli">
-			<img src="./images/q1.png" alt="">
-			<img src="./images/q2.png" alt="">
-			<img src="./images/q3.png" alt="">
-			<img src="./images/q4.png" alt="">
-			<img src="./images/q5.png" alt="">
-			<img src="./images/q6.png" alt="">
-			<img src="./images/q7.png" alt="">
-			<img src="./images/q8.png" alt="">
-			<img src="./images/q9.png" alt="">
-			<img src="./images/q10.png" alt="">
-			<img src="./images/q11.png" alt="">
-			<img src="./images/q12.png" alt="">
-			<img src="./images/q13.png" alt="">
-			<img src="./images/q14.png" alt="">
-			<img src="./images/q15.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q1.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q2.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q3.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q4.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q5.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q6.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q7.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q8.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q9.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q10.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q11.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q12.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q13.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q14.png" alt="">
+			<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/q15.png" alt="">
 		</div>
 	</div>
 	<footer>©2024</footer>
