--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="css/css.css" />
-	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/swiper.css">
+	<link type="text/css" rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/css.css" />
+	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/style.css">
+	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/swiper.css">
 	<title> Home</title>
 	<style>
 		.swiper-slide {
@@ -33,15 +33,15 @@
 		<div class="banner">
 			<div class="swiper mySwiper">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide" style="background-image: url(./images/slide1.jpg);"></div>
-					<div class="swiper-slide" style="background-image: url(./images/slide2.jpg);"></div>
-					<div class="swiper-slide" style="background-image: url(./images/slide3.jpg);"></div>
-					<div class="swiper-slide" style="background-image: url(./images/slide4.jpg);"></div>
-					<div class="swiper-slide" style="background-image: url(./images/slide5.jpg);"></div>
+					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide1.jpg);"></div>
+					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide2.jpg);"></div>
+					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide3.jpg);"></div>
+					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide4.jpg);"></div>
+					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide5.jpg);"></div>
 				</div>
 
 			</div>
-			<script src="./js/swiper-bundle.js"></script>
+			<script src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/js/swiper-bundle.js"></script>
 			<script>
 				var swiper = new Swiper(".mySwiper", {
 					autoplay: true,
@@ -54,7 +54,7 @@
 		<hr>
 		<section>
 			<div class="in1">
-				<img src="./images/index-1.png" alt="">
+				<img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/index-1.png" alt="">
 				<div class="text">
 					<p>
 						“Empowering young people is what I’ve been all about for so long, beginning our roots
@@ -74,7 +74,7 @@
 		</section>
 
 		<!-- <div class="kl1 clearfix"
-			style="background-image: url('./images/1.jpg');width: 100%;height: 450px;background-repeat: no-repeat;background-size: 100% 100%;"> -->
+			style="background-image: url('https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/1.jpg');width: 100%;height: 450px;background-repeat: no-repeat;background-size: 100% 100%;"> -->
 	</div>
 	<!-- <div class="tu" style="margin-top: 150px;">
 		<ul class="clearfix">
