--- a/tupian.html
+++ b/tupian.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<link type="text/css" rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/css.css" />
 	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/style.css">
-	<title>doc</title>
+	<link rel="shortcut icon" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/icon-logo.png" type="image/x-icon">
+	<title>About Us</title>
 </head>
 </head>
 
@@ -14,13 +15,11 @@
 
 	<div>
 		<nav>
-
+			<div><img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/logo.jpg" alt=""></div>
 			<ul class="clearfix nav">
 				<li><a href="index.html"> Home</a></li>
 				<li><a href="guihua.html">Projects & Outcomes</a></li>
 				<li><a href="tupian.html" class="hover">About Us</a></li>
-		
-				<li><a href="Contact Us.html">Contact Us</a></li>
 			</ul>
 		</nav>
 		<div class="banner">
