--- a/guihua.html
+++ b/guihua.html
@@ -3,8 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/css.css" />
+	<link type="text/css" rel="stylesheet" href="css/css.css" />
 	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/style.css">
+	<link rel="shortcut icon" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/icon-logo.png" type="image/x-icon">
 	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/swiper-bundle.css">
 	<style>
 		.nr li {
@@ -14,7 +15,7 @@
 			text-align: left;
 		}
 	</style>
-	<title>Document</title>
+	<title>Projects&Outcomes</title>
 </head>
 </head>
 
@@ -22,12 +23,11 @@
 <body>
 	<div>
 		<nav>
+			<div><img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/logo.jpg" alt=""></div>
 			<ul class="clearfix nav">
 				<li><a href="index.html"> Home</a></li>
 				<li><a href="guihua.html" class="hover">Projects & Outcomes</a></li>
 				<li><a href="tupian.html">About Us</a></li>
-		
-				<li><a href="Contact Us.html">Contact Us</a></li>
 			</ul>
 		</nav>
 
