--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/css.css" />
+	<link type="text/css" rel="stylesheet" href="css/css.css" />
 	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/style.css">
 	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/swiper.css">
+	<link rel="shortcut icon" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/icon-logo.png" type="image/x-icon">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 	<title> Home</title>
 	<style>
 		.swiper-slide {
@@ -16,28 +18,147 @@
 			background-position: center;
 		}
 	</style>
+	<style>
+		.contact-container {
+			display: flex;
+			justify-content: space-between;
+		}
+
+		.contact-left {
+			width: 50%;
+			padding: 20px;
+		}
+
+		.contact-right {
+			width: 50%;
+			padding: 20px;
+		}
+
+		form {
+			/* 根据您的设计自定义表单样式 */
+		}
+
+
+
+		.contact-page {
+			width: 100%;
+			max-width: 1400px;
+			padding: 25px;
+			display: flex;
+			justify-content: center;
+			align-items: flex-start;
+			flex-wrap: wrap;
+		}
+
+		h2 {
+			width: 100%;
+			margin-bottom: 80px;
+			text-transform: uppercase;
+			font-size: 40px;
+		}
+
+		.contact-info,
+		.contact-form {
+			flex: 1;
+		}
+
+		.item {
+			margin-bottom: 40px;
+			font-size: 16px;
+		}
+
+		.item .icon {
+			width: 40px;
+			height: 40px;
+			line-height: 40px;
+			text-align: center;
+			background-color: skyblue;
+			color: #fff;
+			border-radius: 50%;
+			margin-right: 5px;
+		}
+
+		.item p {
+			width: 400px;
+			overflow: hidden;
+			text-wrap: nowrap;
+			text-overflow: ellipsis;
+		}
+
+		.item p:hover {
+			overflow: visible;
+			text-wrap: nowrap;
+			text-overflow: initial;
+		}
+
+		.contact-form {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+		}
+
+		.textb {
+			width: calc(50% - 10px);
+			height: 40px;
+			background-color: lightblue;
+			border: none;
+			color: #fff;
+			padding: 20px;
+			margin-bottom: 20px;
+		}
+
+		textarea {
+			width: 100%;
+			min-height: 200px;
+			max-height: 400px;
+			resize: none;
+			background-color: lightblue;
+			border: none;
+			color: #fff;
+			padding: 20px;
+			margin-bottom: 20px;
+		}
+
+		.btn {
+			margin-left: auto;
+			width: 120px;
+			height: 40px;
+			text-transform: uppercase;
+			background-color: skyblue;
+			border: none;
+			border: 2px solid skyblue;
+			transition: 0.3s linear;
+			cursor: pointer;
+		}
+
+		.btn:hover {
+			background-color: transparent;
+			color: skyblue;
+		}
+	</style>
 </head>
 
 <body>
 
 	<div>
 		<nav>
+			<div><img src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/logo.jpg" alt=""></div>
 			<ul class="clearfix nav">
 				<li><a href="index.html" class="hover"> Home</a></li>
 				<li><a href="guihua.html">Projects & Outcomes</a></li>
 				<li><a href="tupian.html">About Us</a></li>
-	
-				<li><a href="Contact Us.html">Contact Us</a></li>
+
 			</ul>
 		</nav>
 		<div class="banner">
 			<div class="swiper mySwiper">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide1.jpg);"></div>
+					<div class="swiper-slide"
+						style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide1.jpg); background-position: top;"></div>
 					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide2.jpg);"></div>
 					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide3.jpg);"></div>
 					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide4.jpg);"></div>
-					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide5.jpg);"></div>
+					<div class="swiper-slide" style="background-image: url(https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/slide5.jpg);  background-position: top;"></div>
 				</div>
 
 			</div>
@@ -49,7 +170,7 @@
 			</script>
 		</div>
 		<div style="margin: 50px auto; width: 90%;">
-			<video src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/Highlight%20video.mp4" style="width: 100%;" controls></video>
+			<video src="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/Highlight video.mp4" style="width: 100%;" controls></video>
 		</div>
 		<hr>
 		<section>
@@ -86,6 +207,31 @@
 
 		</ul>
 	</div> -->
+
+
+	<div class="contact-page main">
+		<h2>Get in touch</h2>
+		<div class="contact-info">
+			<div class="item">
+				<div style="display: flex;">
+					<i class="icon fas fa-home"></i>
+					<div>
+						<p style="font-size: 14px;"> Northumberland Ave, London WC2N 5BY;</p>
+						<p style="font-size: 14px;">
+							PO YIP BUILDING, 23 HING YIP
+							STREET, KWUN TONG, KOWLOON, HONG KONG.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<i class="icon fas fa-phone"></i>+44 7529282244
+			</div>
+			<div class="item">
+				<i class="icon fas fa-envelope"></i> bli@nextgene.org.cn
+			</div>
+		</div>
+	</div>
 
 	<footer>©2024</footer>
 	</div>
