--- a/guihua.html
+++ b/guihua.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="css/css.css" />
+	<link type="text/css" rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/css.css" />
 	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/style.css">
 	<link rel="shortcut icon" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/images/icon-logo.png" type="image/x-icon">
 	<link rel="stylesheet" href="https://bj-1307903837.cos.ap-beijing.myqcloud.com/%E4%BA%94%E6%9C%88%E5%B0%B1%E5%88%A0%E9%99%A4%E6%89%BE%E4%BB%96%E4%BB%B7%E9%92%B1/css/swiper-bundle.css">
